--- a/public/app-assets/css/main.css
+++ b/public/app-assets/css/main.css
@@ -1,7 +1,11 @@
+/* @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&family=Open+Sans:wght@300&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:wght@100;200;300;400;500;600;700&family=Open+Sans:wght@300&display=swap');
+
 html, body{
     height: 100%;
     margin: 0;
-    font-family: Roboto, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !important;
+    font-family: Lato !important;
 }
 /* width */
 ::-webkit-scrollbar {
