--- a/public/app-assets/css/main.css
+++ b/public/app-assets/css/main.css
@@ -229,10 +229,12 @@ div.hero-text{
 
 .background-img{
     position: absolute;
-    top: 300px;
+    top: 250px;
     left: 450px;
     opacity: 0.6;
-    /* height: 200px; */
+    width: auto !important;
+    /* width: 200px;
+    height: 200px; */
 }
 .background-img-finance{
     position: absolute;
